new uploads to DKRZ

--- a/Script/09_DKRZ_EffortFiles.Rmd
+++ b/Script/09_DKRZ_EffortFiles.Rmd
@@ -9,10 +9,8 @@ editor_options:
 
 The **AIM** of this file is to clean final files catch and effort to upload to DKRZ 
 
-Latest effort file from 06_Extrapolation_forSpinUp: *effort_histsoc_1850_2017.csv*
+Latest effort file from 06_Extrapolation_forSpinUp: *effort_histsoc_1841_2017.csv*
 Latest catch data from 07_catch_data *catch_histsoc_1869_2017.csv*
-
-Check paper by Xiao Liu: https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/2021GL094367
 
 ## set environment 
 
@@ -37,15 +35,34 @@ select<-dplyr::select
 
 yannick_dir_new <- "/rd/gem/private/users/yannickr"
 
-# effort<-read_csv(file.path(yannick_dir_new, "effort_histsoc_1850_2017.csv"))
-effort<-read_csv(file.path(yannick_dir_new, "effort_histsoc_1850_2017_discards.csv"))
-head(effort)
+effort<-read_csv(file.path(yannick_dir_new, "effort_histsoc_1841_2017.csv"))
+# effort<-read_csv(file.path(yannick_dir_new, "effort_histsoc_1850_2017_discards.csv")) # no need see comment on discards in 06 and 07
+# head(effort)
 
-effort2<-effort %>% 
-  filter(Year<=2010) %>% 
-  mutate(Phase = ifelse(Year < 1961, "spin-up", "experiment"))
+# check it's the latest version - OK - do stat filename in terminal 
+# trial<-filter(effort, Phase == "transition")
+# sort(unique(trial$Year))
+# unique(effort$Year)
 
-head(effort2)
+# sort the dataset 
+# effort2<-arrange(effort, Year, LME, eez_country_name, SAUP, Gear, FGroup, Sector)
+
+# # Check with original file - all OK
+# check<-read_csv(file.path(yannick_dir_new, "all_effort_aggregated.csv"))
+# # head(check)
+# 
+# unique(effort$Year)
+# unique(check$Year)
+# sort(unique(effort$LME))
+# sort(unique(check$LME))
+# sort(unique(effort$eez_country_name))
+# sort(unique(check$eez_country_name))
+# sort(unique(effort$SAUP))
+# sort(unique(check$SAUP))
+# sort(unique(effort$Gear))
+# sort(unique(check$Gear)) 
+# sort(unique(effort$FGroup))
+# sort(unique(check$FGroup)) # "Unknown_EEZ" removed in 06 as per Yannick's comment
 
 ```
 
@@ -54,6 +71,7 @@ head(effort2)
 ```{r}
 
 catch<-read_csv(file.path(yannick_dir_new, "catch_histsoc_1869_2017.csv"))
+nrow(catch)
 
 # calculate catch as sum of reported and IUU, discards are generally not considered (Reg's comment in 07_catch_data.rmd)
 # WARNING - this is done in 06_spinUp too 
@@ -62,16 +80,6 @@ catch<-read_csv(file.path(yannick_dir_new, "catch_histsoc_1869_2017.csv"))
 # catch$Catch<-catch$Reported + catch$IUU + catch$Discards 
 # head(catch)
 
-
-ggplot(catch, aes(x = Year, y = Reported))+
-  geom_point()
-
-catch2<-catch %>% 
-  filter(Year <= 2004) %>% 
-  # select(-eez_country_code,-Reported,-IUU,-Discards) %>% # make as similar as possible to effort? not sure about these fields / option with Discards in total catch also has the 3 columns of catches  
-  mutate(Phase = ifelse(Year < 1961, "spin-up", "calibration")) # I don't need a phase here as none is used for experiment or spin-up but all is used for calibration ?? 
-
-head(catch2)
 
 ```
 
@@ -83,12 +91,59 @@ saup<-read_csv(file.path(yannick_dir_new, "SAUPcode_to_Country.csv"))
 
 colnames(saup)<-c("Country_name","SAUP","ISO3","Region")
 
-catch3<-catch2 %>% 
-  full_join(select(saup, -c(Country_name, Region))) %>% 
+# catch<-catch %>% 
+#   full_join(select(saup, -c(Country_name, Region))) %>% 
+#   select(-c(FCountryName,ISO3))
+# 
+# # MISTAKE - it should have been left_join. but OK as no data has been added, only SAUP codes (empty records). 
+# trial<-filter(catch, is.na(Reported))
+# # View(trial)
+
+# CORRECTION - in DKRZ (1/08/2022)
+
+catch<-catch %>% 
+  left_join(select(saup, -c(Country_name, Region))) %>% 
   select(-c(FCountryName,ISO3))
 
-head(effort2)
-head(catch3)
+trial<-filter(catch, is.na(Reported))
+nrow(catch)
+
+# # matching years before checking 
+# catch_comapre<-catch %>% 
+#   filter(Year>=1950) %>% 
+#   left_join(select(saup, -ISO3, -Region))
+# 
+# effort_comapre<-effort %>% 
+#   filter(Year >= 1950) %>% 
+#   left_join(select(saup, -ISO3, -Region))
+# 
+# head(effort_comapre)
+# head(catch_comapre)
+# 
+# # # check effort and catch match 
+# sort(unique(effort_comapre$Year))
+# sort(unique(catch_comapre$Year))
+# sort(unique(effort_comapre$LME))
+# sort(unique(catch_comapre$LME))
+# sort(unique(effort_comapre$eez_country_name))
+# sort(unique(catch_comapre$eez_country_name))
+# sort(unique(effort_comapre$SAUP))
+# sort(unique(catch_comapre$SAUP)) # not matching! a lot more in catch than effort file
+# setdiff(sort(unique(catch_comapre$SAUP)),sort(unique(effort_comapre$SAUP)))
+# setdiff(sort(unique(effort_comapre$SAUP)),sort(unique(catch_comapre$SAUP)))
+# sort(unique(effort_comapre$FGroup))
+# sort(unique(catch_comapre$FGroup))
+# 
+# # Check discrepancy catch and effort 
+# 
+# # only in catch: 
+# a<-filter(catch_comapre, SAUP %in%  setdiff(sort(unique(catch_comapre$SAUP)),sort(unique(effort_comapre$SAUP))))
+# a<-unique(a[,c(2,11)])
+# View(a)
+# 
+# a<-filter(effort_comapre, SAUP %in%  setdiff(sort(unique(effort_comapre$SAUP)),sort(unique(catch_comapre$SAUP))))
+# a<-unique(a[,c(3,10)])
+# View(a)
 
 ```
 
@@ -105,24 +160,33 @@ lme<-read_csv(file.path(yannick_dir_new, "Reg_catchData/LMECells.csv")) # with n
 
 ```{r}
 
+# provide only to experiment and overwrite phase
+effort2<-effort %>% 
+  filter(Year <= 2010) %>% 
+  mutate(Phase = ifelse(Year < 1961, "transition", "experiment"))
+
 # rearrange columns 
 effort2<-effort2[,c("Year","Sector", "LME", "eez_country_name","SAUP", "Gear", "FGroup", "NomActive", "Phase")]
 head(effort2)
 
-# catch3<-catch3[,c("Year","Sector", "LME", "eez_country_name","SAUP", "FGroup", "Catch", "Phase")]
-# if catch included discards
-catch3<-catch3[,c("Year","Sector", "LME", "eez_country_name","SAUP", "FGroup", "Reported", "IUU", "Discards", "Phase")]
+catch2<-catch %>% 
+  filter(Year <= 2004) # %>% 
+  # select(-eez_country_code,-Reported,-IUU,-Discards) %>% # make as similar as possible to effort? not sure about these fields / option with Discards in total catch also has the 3 columns of catches  
+  # mutate(Phase = ifelse(Year < 1961, "spin-up", "calibration")) # I don't need a phase here as none is used for experiment or spin-up but all is used for calibration ?? 
 
+# head(catch2)
+catch3<-catch2[,c("Year","Sector", "LME", "eez_country_name","SAUP", "FGroup", "Reported", "IUU", "Discards")]
 head(catch3)
 
 # final effort 
 dkrz<-"/rd/gem/private/users/yannickr/DKRZ_EffortFiles/"
+fwrite(x = effort2, file.path(dkrz, "effort_histsoc_1841_2010.csv")) # needs to be at 1841 because it needs to match the climate inputs
 # fwrite(x = effort2, file.path(dkrz, "effort_histsoc_1850_2010.csv"))
-fwrite(x = effort2, file.path(dkrz, "effort_histsoc_1850_2010_discards.csv"))
+# fwrite(x = effort2, file.path(dkrz, "effort_histsoc_1850_2010_discards.csv")) # no need for this - see comment on discards in 06 and 07
 
 # final catch 
-# fwrite(x = catch3, file.path(dkrz, "calibration_catch_histsoc_1850_2004.csv"))
-fwrite(x = catch3, file.path(dkrz, "calibration_catch_histsoc_1850_2004_discards.csv"))
+fwrite(x = catch3, file.path(dkrz, "calibration_catch_histsoc_1850_2004.csv"))
+# fwrite(x = catch3, file.path(dkrz, "calibration_catch_histsoc_1850_2004_discards.csv")) # no need for this as we don't need total catches in catch file but let the modeler choose. * need to specify somewhere in protocol that effort is based on reported + IUU and discards are inaccurate. 
 
 # LME codes 
 fwrite(x = lme, file.path(dkrz, "LMEnames.csv"))
@@ -132,5 +196,11 @@ fwrite(x = saup, file.path(dkrz, "SAUPnames.csv"))
 
 # upload to DKRZ
 # scp -r DKRZ_EffortFiles/* b381217@levante.dkrz.de:/home/b/b381217/temp_effort/
+
+# latest updated and uploads to DKRZ
+# Effort file in DKRZ on 28/07/2022 (last printed from this script and from 06 and last uploaded on DKRZ)
+# catch file in DKRZ on 01/08/2022 (last printed from this script adn last uploaded on DKRZ. Difference from the 28th version is only that I removed SAUP where catches were NAs and that got there because of a full_join instead of a left_join - see line 104)
+
+# email to Fishmip community from Julia re updated and final data 29/07/2022 night and 30/07/2022 
 
 ```
